* Fix for messed up scrollbars on the library.  (Needed JavaScript hack to get to work in Firefox.)
git-svn-id: https://svn.broadinstitute.org/genepattern/trunk@10776 48a7a3f7-ad46-0410-b969-29950918272e

--- a/website/pipeline/styles/pipelines.css
+++ b/website/pipeline/styles/pipelines.css
@@ -45,20 +45,39 @@ body {
     float: right;
     margin-right: 20px;
 }
+#libraryWrapper {
+	position: fixed;
+	top: 112px;
+	left: 0;
+	width: 190px;
+	background-color: #DFDFB9;
+    border: 1px solid #CCCC99;
+	height: 100%;
+	padding: 0px;
+	margin: 0px;
+}
+
+#libraryWrapper table {
+	height: 100%;
+	padding: 0px;
+	margin: 0px;
+	width: 190px;
+}
+
+#libraryWrapper table tr td {
+	vertical-align: top;
+	padding: 0px;
+	margin: 0px;
+	width: 190px;
+}
 
 #library {
-    position: fixed;
     overflow-y: auto;
     overflow-x: hidden;
 	z-index: 3000;
-    top: 112px;
-	left: 0;
-	width: 190px;
-    min-height: 100%;
-    background-color: #DFDFB9;
-    border: 1px solid #CCCC99;
-    padding: 5px 0 15px 15px;
-    height: 100%;
+	padding: 5px 0 15px 5px;
+	height: 100%;
+	width: 183px;
 }
 
 #attachFile {
@@ -284,7 +303,7 @@ input[type="file"] {
 
 .bottomSpacer {
     width: 100%;
-    height: 125px;
+    height: 110px;
 }
 
 .spacerDiv {
